# task02---zoo-AsherMentzer

./: .gitignore  CMakeLists.txt  README.md
include/: Animal.h  AnimalTypes.h  Lion.h  Location.h  Monkey.h  Shark.h  Zoo.h
src/: Animal.cpp  CMakeLists.txt  Lion.cpp  Location.cpp  Monkey.cpp  Shark.cpp  Zoo.cpp  main.cpp
